--- a/Homepage.html
+++ b/Homepage.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-title">Welcome to My Home Page</h1>
+        <p class="main-title">Welcome to My Home Page</p>
     </div>
 </body>
 </html>
